--- a/Tellianttimesheettest/test-output/emailable-report.html
+++ b/Tellianttimesheettest/test-output/emailable-report.html
@@ -9,17 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">86,078</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">73,935</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Telliant_timesheet.app.LoginTest</td><td><a href="#m0">clearExistingAction</a></td><td rowspan="1">1605681837431</td><td rowspan="1">652</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Telliant_timesheet.app.LoginTest</td><td><a href="#m1">login</a></td><td rowspan="1">1605681765666</td><td rowspan="1">34556</td></tr><tr class="passedeven"><td><a href="#m2">viewtimesheet</a></td><td rowspan="1">1605681800237</td><td rowspan="1">37191</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Telliant_timesheet.app.LoginTest</td><td><a href="#m0">clearExistingAction</a></td><td rowspan="1">1607071260682</td><td rowspan="1">219</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Telliant_timesheet.app.LoginTest</td><td><a href="#m1">login</a></td><td rowspan="1">1607071198645</td><td rowspan="1">29091</td></tr><tr class="passedeven"><td><a href="#m2">viewtimesheet</a></td><td rowspan="1">1607071227741</td><td rowspan="1">32940</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">Telliant_timesheet.app.LoginTest#clearExistingAction</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at pageobject.TimesheetPage.addProject(TimesheetPage.java:36)
 	at Telliant_timesheet.app.LoginTest.clearExistingAction(LoginTest.java:70)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
 	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
 	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
